Updated demo app

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,11 +4,13 @@
     <color name="demo_theme_main_color">@color/md_blue_400</color>
     <color name="demo_theme_status_bar_color">@color/md_blue_500</color>
 
+    <color name="md_blue_050">#E3F2FD</color>
+    <color name="md_blue_100">#BBDEFB</color>
     <color name="md_blue_400">#738ffe</color>
     <color name="md_blue_500">#5677fc</color>
 
-    <color name="colorPrimary">@color/md_blue_500</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">@color/md_blue_400</color>
+    <color name="colorPrimaryDark">@color/md_blue_500</color>
     <color name="colorAccent">#FF4081</color>
 
 </resources>
